<?xml version="1.0"?>
<package>
  <name>pr2_pbd_interaction</name>
  <version>0.0.0</version>
  <description>The pr2_pbd_interaction package</description>

  <maintainer email="sonyaa@cs.washington.edu">Sonya Alexandrova</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pr2_pbd_interaction</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>

  <!--<depend package="actionlib"/>-->
  <!--<depend package="arm_navigation_msgs"/>-->
  <!--<depend package="geometry_msgs"/>-->
  <!--<depend package="interactive_markers"/>-->
  <!--<depend package="kinematics_msgs"/>-->
  <!--<depend package="object_manipulation_msgs"/>-->
  <!--<depend package="pr2_arm_kinematics"/>-->
  <!--<depend package="pr2_controllers_msgs"/>-->
  <!--<depend package="pr2_gazebo"/>-->
  <!--<depend package="pr2_gripper_sensor_msgs"/>-->
  <!--<depend package="pr2_interactive_manipulation"/>-->
  <!--<depend package="pr2_interactive_manipulation_frontend"/>-->
  <!--<depend package="rviz"/>-->
  <!--<depend package="pr2_interactive_object_detection"/>-->
  <!--<depend package="pr2_mechanism_controllers"/>-->
  <!--<depend package="pr2_mechanism_msgs"/>-->
  <!--<depend package="pr2_pbd_speech_recognition"/>-->
  <!--<depend package="pr2_social_gaze"/>-->
  <!--<depend package="rospy"/>-->
  <!--<depend package="rqt_gui"/>-->
  <!--<depend package="sound_play"/>-->
  <!--<depend package="std_msgs"/>-->
  <!--<depend package="speakeasy"/>-->
  <!--<depend package="tabletop_collision_map_processing"/>-->
  <!--<depend package="tf"/>-->
  <!--<depend package="tf_throttle"/>-->
  <!--<depend package="trajectory_filter_server"/>-->
  <!--<depend package="visualization_msgs"/>-->
  <!--<depend package="ar_track_alvar"/>-->
</package>


